--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <div id="contain">
 
       <!-- ---------------row1--------------- -->
-      <div>
+      <div id="row1">
          <!-- A -->
          <div class="buttons" id="boom">
             <div class="titleHead">
@@ -42,7 +42,7 @@
          </div>        
       </div>
       <!-- ---------------row2--------------- -->
-      <div>
+      <div id="row2">
          <!-- F -->
          <div class="buttons" id="kick">
             <div class="titleHead">
@@ -73,7 +73,7 @@
       </div>
 
       <!-- ---------------row3--------------- -->
-      <div>
+      <div id="row3">
           <!-- J -->
           <div class="buttons" id="snare">
             <div class="titleHead">
